# CROSS-implementation

./: README
Additional_Implementations/Attack_Cost_Estimation_Scripts/: macros.sage
Additional_Implementations/Attack_Cost_Estimation_Scripts/RSDP/: BJMM.sage  BJMM_shifted.sage  main.sage  stern.sage  stern_shifted.sage
Additional_Implementations/Attack_Cost_Estimation_Scripts/RSDPG/: main.sage
Additional_Implementations/Benchmarking/: CMakeLists.txt  bench_all.sh  test_all.sh
Additional_Implementations/Benchmarking/include/: arith_unit_tests.h  rng.h  timing_and_stat.h
Additional_Implementations/Benchmarking/lib/: CROSS_benchmark.c  CROSS_test.c
Additional_Implementations/Cortex-M4_Implementation/: CMakeLists.txt  README.md  run.sh  test_all_mem_opts.py
Additional_Implementations/Cortex-M4_Implementation/m4ref/include/: csprng_hash.h
Additional_Implementations/Cortex-M4_Implementation/m4ref/lib/: CROSS.c
Additional_Implementations/Cortex-M4_Implementation/m4stack/include/: csprng_hash.h  fp_arith.h  m4_defs.h  m4_fallback.h  merkle_tree.h  restr_arith.h  seedtree.h
Additional_Implementations/Cortex-M4_Implementation/m4stack/lib/: CROSS.c  csprng_hash.c  merkle.c  pack_unpack.c
Additional_Implementations/Cortex-M4_Implementation/pqm4/include/: build_defs.h  build_defs_unifdef.h
Additional_Implementations/Cortex-M4_Implementation/testing/include/: randombytes.h
Additional_Implementations/KAT_Generation/: CMakeLists.txt
Additional_Implementations/KAT_Generation/include/: rng.h
Additional_Implementations/KAT_Generation/lib/: KAT_NIST_rng.c  PQCgenKAT_sign.c  rng.c
Additional_Implementations/Parameter_Generation_Scripts/: code_parameters.csv  compute_derived_parameters.py  recomputed_parameters.h  required_bits_CSPRNG.py  seed_tree_structure_constants.py  worst_case_seed_tree_param_computer.py
KAT/: sha_512_sum_KATs
Optimized_Implementation/include/: KeccakP-1600-times4-SnP.h  KeccakP-1600-unrolling.macros  SIMD256-config.h  align.h  architecture_detect.h  csprng_hash.h  fips202x4.h  fp_arith.h  fq_arith.h  restr_arith.h  sha3.h
Optimized_Implementation/lib/: CROSS.c  KeccakP-1600-times4-SIMD256.c  fips202x4.c  merkle.c  seedtree.c
Reference_Implementation/include/: CROSS.h  api.h  build_defs.h  csprng_hash.h  fips202.h  fp_arith.h  fq_arith.h  keccakf1600.h  merkle.h  merkle_tree.h  pack_unpack.h  parameters.h  restr_arith.h  seedtree.h  sha3.h
Reference_Implementation/lib/: CROSS.c  csprng_hash.c  fips202.c  keccakf1600.c  merkle.c  pack_unpack.c  seedtree.c  sign.c
